--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
         <!-- about-area start -->
         <div class="about-area ptb-100 bg-1">
@@ -16,12 +17,12 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12 ">
                                 <div class="about-img">
-                                    <img src="assets/images/about/1.jpg" alt="">
+                                    <img src="{% static 'assets/images/about/1.jpg' %}" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6 hidden-sm">
                                 <div class="about-img">
-                                    <img src="assets/images/about/2.jpg" alt="">
+                                    <img src="{% static 'assets/images/about/2.jpg' %}" alt="">
                                 </div>
                             </div>
                         </div>
@@ -36,7 +37,7 @@
                 <div class="row">
                     <div class="col-md-6 hidden-sm hidden-xs">
                         <div class="about-img">
-                            <img src="assets/images/about/3.png" alt="">
+                            <img src="{% static 'assets/images/about/3.png' %}" alt="">
                         </div>
                     </div>
                     <div class="col-md-6 col-xs-12">
@@ -180,7 +181,7 @@
                     </div>
                     <div class="col-md-6 hidden-sm hidden-xs">
                         <div class="about-img">
-                            <img src="assets/images/about/4.jpg" alt="">
+                            <img src="{% static 'assets/images/about/4.jpg' %}" alt="">
                         </div>
                     </div>
                 </div>
@@ -195,21 +196,21 @@
                         <div class="test-active">
                             <div class="test-items text-center">
                                 <div class="test-img">
-                                    <img src="assets/images/test/1.png" alt="">
+                                    <img src="{% static 'assets/images/test/1.png' %}" alt="">
                                 </div>
                                 <h2>Dele Herera</h2>
                                 <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum metus quis condimentum auctor. Maecenas eu urna vel turpis lacinia consectetur. Proin ornare convallis erat. <i class="fa fa-quote-right"></i> </p>
                             </div>
                             <div class="test-items text-center">
                                 <div class="test-img">
-                                    <img src="assets/images/test/2.png" alt="">
+                                    <img src="{% static 'assets/images/test/2.png' %}" alt="">
                                 </div>
                                 <h2>Alex Smit</h2>
                                 <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum metus quis condimentum auctor. Maecenas eu urna vel turpis lacinia consectetur. Proin ornare convallis erat. <i class="fa fa-quote-right"></i> </p>
                             </div>
                             <div class="test-items text-center">
                                 <div class="test-img">
-                                    <img src="assets/images/test/3.png" alt="">
+                                    <img src="{% static 'assets/images/test/3.png' %}" alt="">
                                 </div>
                                 <h2>Pedro Herera</h2>
                                 <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum metus quis condimentum auctor. Maecenas eu urna vel turpis lacinia consectetur. Proin ornare convallis erat. <i class="fa fa-quote-right"></i> </p>
@@ -228,22 +229,22 @@
                     <div class="brand-active">
                         <div class="col-xs-12">
                             <a href="#">
-                                <img src="assets/images/brand/1.png" alt="">
+                                <img src="{% static 'assets/images/brand/1.png' %}" alt="">
                             </a>
                         </div>
                         <div class="col-xs-12">
                             <a href="#">
-                                <img src="assets/images/brand/2.png" alt="">
+                                <img src="{% static 'assets/images/brand/2.png' %}" alt="">
                             </a>
                         </div>
                         <div class="col-xs-12">
                             <a href="#">
-                                <img src="assets/images/brand/3.png" alt="">
+                                <img src="{% static 'assets/images/brand/3.png' %}" alt="">
                             </a>
                         </div>
                         <div class="col-xs-12">
                             <a href="#">
-                                <img src="assets/images/brand/4.png" alt="">
+                                <img src="{% static 'assets/images/brand/4.png' %}" alt="">
                             </a>
                         </div>
                     </div>
