--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,7 +12,7 @@
                              <div class="row">
                                 <div class="col-md-3 col-sm-9 col-xs-6">
                                     <div class="logo">
-                                        <a href="index.html">
+                                        <a href="/">
                                             <img src="{% static 'assets/images/logo.png' %}" alt="">
                                         </a>
                                     </div>
@@ -29,6 +29,9 @@
                                             <li><a href="events">Events</a>
                                             </li>
                                             <li><a href="details">Details</a>
+                                            </li>
+                                            </li>
+                                            <li><a href="post_details">Post-details</a>
                                             </li>
                                             <li><a href="contact">CONTACT</a></li>
                                         </ul>
