--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -10,21 +10,17 @@
                             <div class="col-xs-12">
                                 <div class="blog-wrap">
                                     <div class="blog-img">
-                                        <img src="{% static 'assets/images/blog/1.png' %}" alt="">
+                                        <img src="{{ drawing.thumbnail.url }}" alt="">
                                     </div>
                                     <div class="blog-content">
                                         <ul class="blog-meta">
-                                            <li><a href="#"><i class="fa fa-clock-o"></i> June, 23, 2017</a></li>
-                                            <li><a href="#"><i class="fa fa-user"></i> Admin</a></li>
-                                            <li><a href="#"><i class="fa fa-comments"></i> 4</a></li>
+                                            <li><a href="#"><i class="fa fa-clock-o"></i>{{ drawing.timestamp }}</a></li>
                                         </ul>
-                                        <h3>teger eget erat ut mi vehicula dapibus</h3>
+                                        <h3>{{ drawing.title }}</h3>
                                     </div>
                                 </div>
                                 <div class="blog-details-wrap">
-                                    <p>Sed efficitur elementum nulla eget condimentum. Nulla faucibus lobortis condimentum.Vestibulum consequat, dolor non ultrices elementum, arcu erat suscipit neque, id condimentum turpis ipsum in lorem. Maecenas commodo pellentesque consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque interdum convallis enim, quis pulvinar massa aliquet sit amet. Nullam at nunc velit. Proin suscipit orci ut commodo finibus. Duis eget ultricies sapien. Morbi velit felis, varius eu interdum in, lobortis ac lectus. Proin rhoncus, ipsum sit amet eugiat pulvinar, risus enim laoreet est, ac imperdiet ipsum sapien ac dolor. Vivamus euismod eget enim sed porttitor.</p>
-                                    <p>Aliquam tempus, orci ut pulvinar congue, sem dui vestibulum eros, vitae interdum neque arcu a neque. Pellentesque convallis consequat risus, sed tristique dolor fringilla ac. Nulla ligula turpis, ultricies vitae tristique quis, suscipit in lacus. In in felis lectus. Quisque et sollicitudin augue. Phasellus efficitur arcu sit amet arcu pretium, quis cursus dui ultricies. Ut pretium, odio at ultricies pretium, dolor sem tristique tortor, eu condimentum massa lorem et justo. Vestibulum eget augue a risus iaculis tincidunt.</p>
-                                    <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam enim tellus, condimentum non rutrum et, fermentum sit amet massa. Maecenas ac ornare sapien, quis volutpat dolor. Aesent sagittis elit sit amet odio viverra ultricies.</blockquote>
+                                    <p>{{ drawing.overview }}</p>
 
                                     <div class="socila-link">
                                         <ul>
@@ -35,18 +31,6 @@
                                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                             <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
                                         </ul>
-                                    </div>
-                                    <div class="blog-form">
-                                        <h3>Leave A Comment</h3>
-                                        <form action="#">
-                                            <span>Name</span>
-                                            <input type="text" placeholder="Your name">
-                                            <span>Email</span>
-                                            <input type="email" placeholder="Your Email">
-                                            <span>Your Comment</span>
-                                            <textarea name="massage" cols="30" rows="10" placeholder="Your massage"></textarea>
-                                            <button>Submit</button>
-                                        </form>
                                     </div>
                                 </div>
                             </div>
